[tool.poetry]
name = "player-values"
version = "0.1.0"
description = ""
authors = ["Matt"]

[tool.poetry.dependencies]
python = "^3.6"
pydash = "^4.7"
marshmallow = {version = "^2.16",allows-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
